<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_clock_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhiteCloud"
    tools:context="agm.andruino.arduinoconnect.ClockController">

    <!-- HEADER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clock_header"
        android:gravity="center">

        <TextView
            android:text="@string/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CLOCKText"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:paddingRight="10dp"/>

        <ToggleButton
            android:text="ToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DisplayButton"
            android:checked="false" />

    </LinearLayout>

    <!-- LISTA DE OPCIONES -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clock_header"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- HORA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- TEXTO -->
                <TextView
                    android:text="@string/display_hour_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/HourText"
                    android:textSize="24sp"
                    style="@style/TextBlack"
                    android:textStyle="bold"/>

                <TextView
                    android:text="20:02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/Hour"
                    android:textColor="@color/colorSoftBlack"
                    android:textSize="30sp"
                    android:paddingBottom="10dp"/>

                <Button
                    android:text="@string/set_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setHour" />
            </LinearLayout>

            <!-- FECHA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- TEXTO -->
                <TextView
                    android:text="@string/display_date_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/DateText"
                    android:textSize="24sp"
                    style="@style/TextBlack"
                    android:textStyle="bold"/>

                <TextView
                    android:text="12/12/12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/Date"
                    android:textColor="@color/colorSoftBlack"
                    android:textSize="30sp"
                    android:paddingBottom="10dp"/>

                <Button
                    android:text="@string/set_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setDate" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
