<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhiteCloud"
    tools:context="agm.andruino.arduinoconnect.Inicio">

    <!-- LISTA DE OPCIONES -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <!-- CLOCK -->
        <LinearLayout
            android:id="@+id/ClockController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:src="@drawable/clock"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <TextView
                android:text="@string/clock"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleBlack">
            </TextView>
        </LinearLayout>

        <!-- LED -->
        <LinearLayout
            android:id="@+id/LedController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:src="@drawable/led"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <TextView
                android:text="@string/led"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleBlack">
            </TextView>
        </LinearLayout>

        <!-- SOUND -->
        <LinearLayout
            android:id="@+id/SoundController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:src="@drawable/sound"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <TextView
                android:text="@string/sound"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleBlack">
            </TextView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
